--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "framer-motion": "^12.19.2",
     "lucide": "^0.523.0",
     "lucide-react": "^0.523.0",
     "moment": "^2.30.1",
